# QT

./: mainwindow.cpp
Coursework/Inspector/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  StatisticsDialog.cpp  StatisticsDialog.h  StatisticsDialog.ui  main.cpp
HelWorld/: CMakeLists.txt  main.cpp
Lesson10/PreTCPclient/TCPclient/: structs.h  tcpclient.cpp
Lesson2/Task1/: CMakeLists.txt  main.cpp
Lesson3/Task1/BD_connection/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson4/Task1/QTWidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Lesson5/StopWatch/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Lesson6/ExampleRace/: CMakeLists.txt  mainwindow.cpp
Lesson7/Graphic/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Lesson9/PreUDPsocket/UDPSocket/: mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
